Add gc logging to slidingWindow benchmark